Moved collection initialization to the di.php

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "mongodb/mongodb": "^1.9",
         "php-di/php-di": "^6.3",
         "php-di/slim-bridge": "^3.1",
-        "devcoder-xyz/php-dotenv": "^1.1"
+        "devcoder-xyz/php-dotenv": "^1.1",
+        "ext-mongodb": "*"
     },
     "autoload": {
         "psr-4": {
